lots of progress

--- a/public/html/header.jade
+++ b/public/html/header.jade
@@ -1,1 +1,7 @@
-h1 TESTER
+.nav-button-container
+    .main-heading-container
+        .main-heading Nav Bar
+    .btn-group.btn-group-lg
+        button.btn.btn-default.nav-button(type="button") First Button
+        button.btn.btn-default.nav-button(type="button") Second Button
+        button.btn.btn-default.nav-button(type="button") Third Button
