--- a/public/html/index.jade
+++ b/public/html/index.jade
@@ -3,8 +3,7 @@
 - require("bootstrap/js/button.js");
 - require("bootstrap/js/collapse.js");
 - require("bootstrap/js/tab.js");
+- require("../../index.css");
 
 .header
-    .btn-group
-        button.btn.btn-default(type="button") Test Button
 .content
