get things working with less

--- a/public/html/header.jade
+++ b/public/html/header.jade
@@ -1,7 +1,7 @@
-.nav-button-container
+.header-container
     .main-heading-container
         .main-heading Nav Bar
-    .btn-group.btn-group-lg
+    .btn-group.btn-group-lg.nav-button-group
         button.btn.btn-default.nav-button(type="button") First Button
         button.btn.btn-default.nav-button(type="button") Second Button
         button.btn.btn-default.nav-button(type="button") Third Button
