--- a/public/styles/header.less
+++ b/public/styles/header.less
@@ -1,3 +1,20 @@
 .main-heading {
-    font-size: 4em;
+    margin-top: 15px;
+    margin-left: 30px;
+    font-size: 3em;
+}
+
+.main-heading-container {
+    display: inline-block;
+}
+
+.nav-button-group {
+    display: inline-block;
+    margin-left: 30px;
+    margin-top: -25px;
+}
+
+.header-container {
+    background-color: #eeeeee;
+    padding-bottom: 15px;
 }
