--- a/public/html/header.jade
+++ b/public/html/header.jade
@@ -1,7 +1,6 @@
 .header-container
     .main-heading-container
         .main-heading Nav Bar
-    .btn-group.btn-group-lg.nav-button-group
-        button.btn.btn-default.nav-button(type="button") First Button
-        button.btn.btn-default.nav-button(type="button") Second Button
-        button.btn.btn-default.nav-button(type="button") Third Button
+    a.nav-button(href="#", type="button") First
+    a.nav-button(href="#", type="button") Second
+    a.nav-button(href="#", type="button") Third
