tweak our header styles a bit

--- a/public/html/header.jade
+++ b/public/html/header.jade
@@ -1,6 +1,7 @@
 .header-container
     .main-heading-container
         .main-heading Nav Bar
-    a.nav-button(href="#", type="button") First
-    a.nav-button(href="#", type="button") Second
-    a.nav-button(href="#", type="button") Third
+    .nav-button-group.btn-group
+        a.nav-button(href="#", type="button") First
+        a.nav-button(href="#", type="button") Second
+        a.nav-button(href="#", type="button") Third
