--- a/public/styles/header.less
+++ b/public/styles/header.less
@@ -11,17 +11,18 @@
 .nav-button-group {
     display: inline-block;
     margin-left: 30px;
-    margin-top: -15px;
     margin-bottom: 20px;
 }
 
 .nav-button {
     display: inline;
     font-size: 1.5em;
-    margin-left: 30px;
+    margin-left: 5px;
+    padding: 10px 15px 10px 15px;
 
     &:hover {
         text-decoration: none;
+        background-color: #cccccc;
     }
 }
 
